update style to fix alignment

--- a/main.css
+++ b/main.css
@@ -40,6 +40,10 @@ p {
 	margin: 0;
 }
 
+#container {
+	padding-left: 20px;
+}
+
 
 .module {
 	background-color: white;
@@ -134,7 +138,7 @@ audio {
 }
 
 #bottom-right {
-	right: 20px;
+	right: 0px;
 	position: absolute;
 	bottom: 20px;
 }
@@ -152,6 +156,11 @@ audio {
 		overflow-x: visible;
 		overflow-y: visible;
 	}
+
+	#container {
+		padding-left: 0;
+	}
+	
 	#player-wrapper {
 		display: block;
 		height: auto;
